# mobile-sdk-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  Makefile.toml  Package.swift  README.md  SpruceIDMobileSdkRs.podspec  SpruceIDMobileSdkRsRustFramework.podspec  SpruceIDWalletSdkRs.podspec  SpruceIDWalletSdkRsRustFramework.podspec  WalletSdkRs.podspec  WalletSdkRsRustFramework.podspec  flake.nix  test.jwk  uniffi.toml
.github/workflows/: cd.yml  ci.yml  release.yml
MobileSdkRs/Sources/MobileSdkRs/: mobile_sdk_rs.swift
WalletSdkRs/: Package.swift
WalletSdkRs.xcodeproj/: project.pbxproj
WalletSdkRs/RustFramework.xcframework/: Info.plist
WalletSdkRs/RustFramework.xcframework/ios-arm64/: libwallet_sdk_rs.dylib
WalletSdkRs/RustFramework.xcframework/ios-arm64/Headers/: module.modulemap  wallet_sdk_rsFFI.h
WalletSdkRs/RustFramework.xcframework/ios-arm64_x86_64-simulator/: libwallet_sdk_rs.dylib
WalletSdkRs/RustFramework.xcframework/ios-arm64_x86_64-simulator/Headers/: wallet_sdk_rsFFI.h
WalletSdkRs/Sources/WalletSdkRs/: wallet_sdk_rs.swift
kotlin/: .gitignore  build.gradle  gradle.properties  local.properties  settings.gradle.kts
kotlin/mobilesdkrs/: build.gradle
kotlin/mobilesdkrs/src/androidTest/java/com/spruceid/mobile/sdk/rs/: ExampleInstrumentedTest.kt
kotlin/walletsdkrs/: build.gradle
kotlin/walletsdkrs/src/androidTest/java/com/spruceid/wallet/sdk/rs/: ExampleInstrumentedTest.kt
kotlin/walletsdkrs/src/test/java/com/spruceid/wallet/sdk/rs/: ExampleUnitTest.kt
src/: common.rs  context.rs  credential.rs  credentials.rs  credentials_callback.rs  crypto.rs  key_manager.rs  lib.rs  local_key_manager.rs  local_store.rs  logger.rs  mdl_reader.rs  metadata_manager.rs  outcome.rs  reader.rs  storage_manager.rs  tests.rs  trust_manager.rs  vdc_collection.rs  w3c_vc_barcodes.rs  wallet.rs
src/credential/: json_vc.rs  jwt_vc.rs  mdoc.rs  mod.rs  sd_jwt.rs  sd_jwt_vc.rs  status.rs  status_20240406.rs  vcdm2_sd_jwt.rs
src/did/: error.rs  mod.rs
src/mdl/: holder.rs  mod.rs  reader.rs  util.rs
src/oid4vci/: context_loader.rs  error.rs  http_client.rs  metadata.rs  mod.rs  options.rs  proof_of_possession.rs  session.rs  wrapper.rs
src/oid4vp/: credential_callback.rs  error.rs  holder.rs  mod.rs  permission_request.rs  presentation.rs  presentation_exchange.rs  request_signer.rs  verifier.rs  wallet.rs
src/oid4vp/iso_18013_7/: build_response.rs  mod.rs  prepare_response.rs  requested_values.rs
src/proof_of_possession/: error.rs  mod.rs
src/verifier/: crypto.rs  helpers.rs  mod.rs  outcome.rs
src/verify/: helpers.rs  mod.rs
tests/: test_generated_bindings.rs
tests/bindings/: test.kts  test.swift  test_key_manager.swift  test_storage_manager.swift  test_wallet.swift
tests/context/: examples_vcplayground_org_contexts_alumni_v2.json  examples_vcplayground_org_contexts_food_safety_certification_v1.json  examples_vcplayground_org_contexts_gs1_8110_coupon_v2.json  examples_vcplayground_org_contexts_utopia_natcert_v1.json  w3_org_ns_controller_v1.json  w3id_org_citizenship_v4rc1.json  w3id_org_vc_render_method_v2rc1.json  w3id_org_vdl_aamva_v1.json  w3id_org_vvt_v1rc2.json
tests/examples/: 18013_7_presentation_definition.json  18013_7_presentation_definition_age_over_25.json  alumni_vc.json  dpp.json  employment_authorization_document_vc.json  jwk.json  mdl.json  mdl.jwt  mdl_presentation_definition.json  sd_vc.jwt  vehicle_title.json  vvt.jwt
tests/res/: ead-vcb  ed25519-2020-10-18.json  issuer-cert.pem  mdoc.b64  mrz-vcb  pkcs8.pem  root-cert.pem  vc
tests/res/mdl/: iaca-certificate.pem  iaca-key.pem  portrait.base64
